--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /md-02-manipulacao-de-listas/for-forin/node_modules
 /md-03-introducao-testes/testes/node_modules
+/md-04-node-alem-da-web/cli/node_modules
