Inicio testes de conexao com banco postgres

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /md-02-manipulacao-de-listas/for-forin/node_modules
 /md-03-introducao-testes/testes/node_modules
 /md-04-node-alem-da-web/cli/node_modules
+/md-06-multi-database-postgres/node_modules
