--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /md-03-introducao-testes/testes/node_modules
 /md-04-node-alem-da-web/cli/node_modules
 /md-06-multi-database-postgres/node_modules
+/md-07-multi-database-postgres-mongo/node_modules
