add new entree on ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /md-04-node-alem-da-web/cli/node_modules
 /md-06-multi-database-postgres/node_modules
 /md-07-multi-database-postgres-mongo/node_modules
+/md-08-multi-database-refactoring-mongo/node_modules
