Refatorando a estratégia de Postgres para multi-schemas

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /md-06-multi-database-postgres/node_modules
 /md-07-multi-database-postgres-mongo/node_modules
 /md-08-multi-database-refactoring-mongo/node_modules
+/md-09-multi-database-refactoring-postgres/node_modules
