Criando estrutura para criação de APIs com Hapi

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /md-07-multi-database-postgres-mongo/node_modules
 /md-08-multi-database-refactoring-mongo/node_modules
 /md-09-multi-database-refactoring-postgres/node_modules
+/md-10-api-estrutura/node_modules
