--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /md-10-api-estrutura/node_modules
 /md-11-hapi-listar/node_modules
 /md-12-hapi-listar-joi/node_modules
+/md-13-hapi-cadastrar/node_modules
