--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /md-11-hapi-listar/node_modules
 /md-12-hapi-listar-joi/node_modules
 /md-13-hapi-cadastrar/node_modules
+/md-14-hapi-atualizar/node_modules
