--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /md-12-hapi-listar-joi/node_modules
 /md-13-hapi-cadastrar/node_modules
 /md-14-hapi-atualizar/node_modules
+/md-15-hapi-remover/node_modules
