--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /md-13-hapi-cadastrar/node_modules
 /md-14-hapi-atualizar/node_modules
 /md-15-hapi-remover/node_modules
+/md-16-hapi-swagger/node_modules
