--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /md-14-hapi-atualizar/node_modules
 /md-15-hapi-remover/node_modules
 /md-16-hapi-swagger/node_modules
+/md-17-hapi-jwt/node_modules
