--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /md-15-hapi-remover/node_modules
 /md-16-hapi-swagger/node_modules
 /md-17-hapi-jwt/node_modules
+/md-18-hapi-user-validation/node_modules
