--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /md-16-hapi-swagger/node_modules
 /md-17-hapi-jwt/node_modules
 /md-18-hapi-user-validation/node_modules
+/md-19.0-env/node_modules
