--- a/md-19.0-env/package.json
+++ b/md-19.0-env/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha src/tests/*.js"
+    "test": "mocha src/tests/*.js",
+    "test:prod": "cross-env NODE_ENV=prod npm t"
   },
   "keywords": [],
   "author": "",
