--- a/md-19.0-env/src/config/.env.prod
+++ b/md-19.0-env/src/config/.env.prod
@@ -2,5 +2,5 @@ JWT_KEY=MEU_SEGREDO
 PORT=4000
 SALT_PWD=3
 MONGODB_URL=mongodb://meuuser:minhasenhasecreta@localhost:27017/heroes
-POSTGRES_URL='postgres://meuuser:minhasenhasecreta@localhost/heroes'
+POSTGRES_URL=postgres://meuuser:minhasenhasecreta@localhost/heroes
 SSL_DB=true
